# mcbd-proxy

./: .dockerignore  .dockerignore.txt  .env  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  config.py  docker-bake.hcl  docker-compose.ci.yml  docker-compose.yml  docker_manager.py  entrypoint.sh  env_check.sh  get_container_ip.py  logging_config.py  main.py  metrics.py  nether_bridge.py  proxy.py  proxy_multi.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt  send_test_packets.py  servers.json  settings.json
.github/: dependabot.yml
.github/workflows/: build-proxy.yml  develop-build.yml  fast-validation.yml  load-test-bedrock.yml  load-test-java.yml  load-test.yml  load-testing.yml  main-build.yml  pr-validation.yml  reusable-build.yml
examples/: settings.json
scripts/: healthcheck.sh  start-server.sh  stop-server.sh  validate.sh
tests/: .env  .env.example  Dockerfile.mc-bedrock  Dockerfile.mc-java  conftest.py  docker-compose.tests.local.yml  docker-compose.tests.yml  docker_utils.py  example_local_env.py  helpers.py  load_tester.py  requirements-dev.in  requirements-dev.txt  send_test_packets.py  test_config.py  test_docker_manager.py  test_main.py  test_metrics.py  test_nether_bridge.py  test_proxy.py
tests/images/mc-bedrock/: Dockerfile.mc-bedrock
tests/images/mc-java/: Dockerfile.WIP  Dockerfile.mc-java
tests/integration_tests/: test_integration.py  test_nether_bridge_integration.py
