# pyproject.toml
[project]
name = "nether-bridge"
version = "1.0.0"
description = "An intelligent, on-demand proxy for Minecraft servers running in Docker."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "meek2100" },
]
keywords = ["minecraft", "proxy", "docker", "on-demand"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    # Pinned for production stability
    "docker==7.1.0",
    "mcstatus==12.1.0",
    "prometheus-client==0.20.0",
    "structlog==24.2.0",
    "colorama==0.4.6",
]

[project.urls]
Homepage = "https://github.com/meek2100/nether-bridge"
"Bug Tracker" = "https://github.com/meek2100/nether-bridge/issues"

[project.optional-dependencies]
dev = [
    # Pinned for consistent development and testing environments
    "pytest==8.2.2",
    "pytest-mock==3.14.0",
    "pytest-cov==5.0.0",
    "ruff==0.4.10",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
]

# Explicitly list your modules for setuptools to handle the "flat-layout"
[tool.setuptools]
py-modules = [
    "config",
    "docker_manager",
    "main",
    "metrics",
    "proxy",
]

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    ".venv",
    ".pytest_cache",
    "build",
    "dist",
    "examples",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = []

[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unit tests that do not require external services.",
    "integration: marks tests as integration tests that require Docker Compose.",
]