# pyproject.toml
[project]
name = "nether-bridge"
version = "1.0.0"
description = "An intelligent, on-demand proxy for Minecraft servers in Docker."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "meek2100" },
]
keywords = ["minecraft", "proxy", "docker", "on-demand"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "aiodocker==0.21.0",
    "docker==7.1.0",
    "mcstatus==12.0.2",
    "prometheus-client==0.22.1",
    "structlog==25.4.0",
    "colorama==0.4.6",
    "pydantic==2.8.2",  # Added pydantic dependency
]

[project.urls]
Homepage = "https://github.com/meek2100/mcbd-proxy"
"Bug Tracker" = "https://github.com/meek2100/mcbd-proxy/issues"

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-mock==3.14.1",
    "pytest-cov==6.2.1",
    "ruff==0.12.2",
    "python-dotenv==1.1.1",
    "requests==2.32.4",
    "pytest-asyncio==1.0.0",
]

# Explicitly list your modules for setuptools to handle the "flat-layout"
[tool.setuptools]
py-modules = [
    "config",
    "docker_manager",
    "main",
    "metrics",
    "proxy",
]

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    ".venv",
    ".pytest_cache",
    "build",
    "dist",
    "examples",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = []

[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unit tests that do not require external services.",
    "integration: marks tests as integration tests that require Docker Compose.",
]
asyncio_mode = "auto"