# pyproject.toml
[tool.poetry]
name = "nether-bridge"
version = "1.0.0"
description = "An intelligent, on-demand proxy for Minecraft servers in Docker."
readme = "README.md"
authors = ["meek2100 <meek2100@users.noreply.github.com>"]
license = "MIT"
keywords = ["minecraft", "proxy", "docker", "on-demand"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
aiodocker = "0.21.0"
mcstatus = "12.0.2"
prometheus-client = "0.22.1"
structlog = "25.4.0"
colorama = "0.4.6"
pydantic = "2.8.2"
python-dotenv = "1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
pytest-mock = "3.14.1"
pytest-cov = "6.2.1"
ruff = "0.12.3"
requests = "2.32.4"
pytest-asyncio = "1.1.0"

[tool.poetry.urls]
Homepage = "https://github.com/meek2100/mcbd-proxy"
"Bug Tracker" = "https://github.com/meek2100/mcbd-proxy/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    ".venv",
    ".pytest_cache",
    "build",
    "dist",
    "examples",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = []

[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unit tests that do not require external services.",
    "integration: marks tests as integration tests that require Docker Compose.",
]
asyncio_mode = "auto"